--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Build
+    - name: Log repository name
+      run: echo ${{ github.event.repository.name }}
+    - name: Build (Test)
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Build (Release)
+      if: github.ref_type == "tag"
+      run: cargo build --verbose --release
+    - name: Release
+      uses: softprops/action-gh-release@v2
+      if: github.ref_type == "tag"
+      with:
+          files: ./target/release/${{ github.event.repository.name }}
