--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,10 +23,10 @@ jobs:
     - name: Run tests
       run: cargo test --verbose
     - name: Build (Release)
-      if: github.ref_type == "tag"
+      if: github.ref_type == 'tag'
       run: cargo build --verbose --release
     - name: Release
       uses: softprops/action-gh-release@v2
-      if: github.ref_type == "tag"
+      if: github.ref_type == 'tag'
       with:
           files: ./target/release/${{ github.event.repository.name }}
